--- a/setup.tex
+++ b/setup.tex
@@ -14,7 +14,7 @@ A schematic of the entire accelerator complex and the path followed by protons a
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=1.\textwidth]{figures/setup/cern.jpg} %
-	\caption{The accelerator complex at CERN. ATLAS can be seen inside the SPS on the LHC ring. Figure taken from Ref.~\cite{TEEPCLPC}}
+	\caption{The accelerator complex at CERN. ATLAS can be seen inside the SPS on the LHC ring. Figure taken from Ref.~\cite{Christiane:1260465}}
 	\label{fig:cern}%
 \end{figure}
 
