--- a/thesis-ex.tex
+++ b/thesis-ex.tex
@@ -21,7 +21,7 @@
 \usepackage{hyperref}
 \usepackage{booktabs}
 \usepackage{subcaption}
-\captionsetup{compatibility=false}
+%\captionsetup{compatibility=false}
 \input{macros}
 
 \graphicspath{{logos/}{figures/}}
