--- a/thesis-ex.bib
+++ b/thesis-ex.bib
@@ -15,15 +15,19 @@
 }
 
 
-@online{TEEPCLPC,
-	author = {CERN},
-	title = {TE-EPC-LPC},
-	year = 2016,
+@unpublished{Christiane:1260465,
+author        = "Christiane Lefèvre",
+title         = "{The CERN accelerator complex. Complexe des
+accélérateurs du CERN}",
+month         = "Dec",
+year          = "2008",
+reportNumber  = "CERN-DI-0812015",
+url           = "https://cds.cern.ch/record/1260465",
 }
 
 @article{Evans:2008zzb,
-	doi = {10.1088/1748-0221/3/08/s08001},
-	url = {https://doi.org/10.1088\%2F1748-0221\%2F3\%2F08\%2Fs08001},
+	nodoi = {10.1088/1748-0221/3/08/s08001},
+	nourl = {https://doi.org/10.1088\%2F1748-0221\%2F3\%2F08\%2Fs08001},
 	year = 2008,
 	month = {aug},
 	publisher = {{IOP} Publishing},
@@ -47,7 +51,7 @@
       year           = "2016",
       number         = "12",
       pages          = "C12036",
-      doi            = "10.1088/1748-0221/11/12/C12036",
+      nodoi            = "10.1088/1748-0221/11/12/C12036",
       eprint         = "1610.01994",
       archivePrefix  = "arXiv",
       primaryClass   = "physics.ins-det",
@@ -64,7 +68,7 @@
       year           = "2016",
       number         = "12",
       pages          = "666",
-      doi            = "10.1140/epjc/s10052-016-4507-9",
+      nodoi            = "10.1140/epjc/s10052-016-4507-9",
       eprint         = "1606.01813",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ex",
@@ -84,11 +88,11 @@
   year = {2016},
   month = {Mar},
   publisher = {American Physical Society},
-  doi = {10.1103/PhysRevC.93.034914},
+  nodoi = {10.1103/PhysRevC.93.034914},
   url = {https://link.aps.org/doi/10.1103/PhysRevC.93.034914}
 }
 
-  
+
 @Article{Hulcher2018,
 author="Hulcher, Zachary and others",
 title="Resolution effects in the hybrid strong/weak coupling model",
@@ -154,21 +158,6 @@ url="https://doi.org/10.1007/s100520000474"
 }
 
 
-@article{FF_502TeV,
-  title = {Measurement of jet fragmentation in {Pb+Pb} and $pp$ collisions at $\sqrt{{s}_{NN}}=5.02$ TeV with the {ATLAS} detector},
-  author         = "{ATLAS Collaboration}",
-  collaboration = {ATLAS Collaboration},
-  journal = {Phys. Rev. C},
-  volume = {98},
-  issue = {2},
-  pages = {024908},
-  numpages = {34},
-  year = {2018},
-  month = {Aug},
-  publisher = {American Physical Society},
-  doi = {10.1103/PhysRevC.98.024908},
-  url = {https://link.aps.org/doi/10.1103/PhysRevC.98.024908}
-}
 
 @article{trk_jet_conf,
       title         = "{Measurement of angular and momentum distributions of
@@ -212,7 +201,7 @@ url="https://doi.org/10.1007/s100520000474"
       volume         = "68",
       year           = "2018",
       pages          = "339-376",
-      doi            = "10.1146/annurev-nucl-101917-020852",
+      nodoi            = "10.1146/annurev-nucl-101917-020852",
       eprint         = "1802.04801",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
@@ -436,8 +425,8 @@ url="https://doi.org/10.1007/s100520000474"
                         uncertainties in proton-proton collisions at $\sqrt{s} =
                         13$ TeV with the ATLAS detector}",
       collaboration  = "ATLAS",
-      journal        = "Phys. Rev.",
-      volume         = "D96",
+      journal        = "Phys. Rev. D",
+      volume         = "96",
       year           = "2017",
       number         = "7",
       pages          = "072002",
@@ -588,7 +577,7 @@ url="https://doi.org/10.1007/s100520000474"
       volume         = "191",
       year           = "2015",
       pages          = "159-177",
-      doi            = "10.1016/j.cpc.2015.01.024",
+      nodoi            = "10.1016/j.cpc.2015.01.024",
       eprint         = "1410.3012",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
@@ -677,15 +666,16 @@ url="https://doi.org/10.1007/s100520000474"
 }
 
 @article{Roland:2014jsa,
-      author         = "Roland, G. and \v{S}afa\v{r}\'{i}k, K. and Steinberg, P.",
-      title          =  "{Heavy-ion collisions at the LHC}",
-      journal        = "Prog. Part. Nucl. Phys.",
-      volume         = "77",
-      year           = "2014",
-      pages          = "70-127",
-      nodoi            = "10.1016/j.ppnp.2014.05.001",
-      SLACcitation   = "%%CITATION = PPNPD,77,70;%%"
+author         = "Roland, G. and Safarik, K. and Steinberg, P.",
+title          = "{Heavy-ion collisions at the LHC}",
+journal        = "Prog. Part. Nucl. Phys.",
+volume         = "77",
+year           = "2014",
+pages          = "70-127",
+nodoi            = "10.1016/j.ppnp.2014.05.001",
+SLACcitation   = "%%CITATION = PPNPD,77,70;%%"
 }
+
 @article{Casalderrey-Solana:2016jvj,
       author         = "Casalderrey-Solana, Jorge and others",
       title          = "{Angular Structure of Jet Quenching Within a Hybrid
@@ -863,6 +853,8 @@ url="https://doi.org/10.1007/s100520000474"
       reportNumber   = "CERN-PH-EP-2012-191",
       SLACcitation   = "%%CITATION = ARXIV:1210.6210;%%",
 }
+
+
 @article{ibl1,
    author = "{ATLAS Collaboration}",
    title = "{ATLAS Insertable B-Layer Technical Design Report}",
@@ -870,6 +862,8 @@ url="https://doi.org/10.1007/s100520000474"
    url = "http://cds.cern.ch/record/1291633",
    year = "2010"
 }
+
+
 @article{ibl2,
    author = "{ATLAS Collaboration}",
    title = "{ATLAS Insertable B-Layer Technical Design Report Addendum}",
@@ -877,13 +871,17 @@ url="https://doi.org/10.1007/s100520000474"
    url = "http://cds.cern.ch/record/1451888",
    year = "2012"
 }
+
 @article{HIjesnote,
-  author = "{ATLAS Collaboration}",
-  title = "{Jet energy scale and its uncertainty for jets reconstructed using the ATLAS heavy ion jet algorithm}",
-  note = "ATLAS-CONF-2015-016",
-  url="https://cds.cern.ch/record/2008677",
-  year="2015"
+author         = "The ATLAS collaboration",
+title          = "{Jet energy scale and its uncertainty for jets
+reconstructed using the ATLAS heavy ion jet algorithm}",
+collaboration  = "ATLAS",
+year           = "2015",
+reportNumber   = "ATLAS-CONF-2015-016",
+SLACcitation   = "%%CITATION = ATLAS-CONF-2015-016;%%"
 }
+
 @article{JERConfNote,
       author         = "{ATLAS Collaboration}",
       title          = "{Data-driven determination of the energy scale and
@@ -949,6 +947,7 @@ url="https://doi.org/10.1007/s100520000474"
       reportNumber   = "CERN-PH-EP-2014-172",
       SLACcitation   = "%%CITATION = ARXIV:1411.2357;%%",
 }
+
 @article{Aad:2014bia,
       author         = "{ATLAS Collaboration}",
       title          = "{Jet energy measurement and its systematic uncertainty in
@@ -1029,49 +1028,24 @@ url="https://doi.org/10.1007/s100520000474"
 
 
 @article{xcalib_run1,
-      author        =  {{ATLAS Collaboration}},
-      Notitle        =  "{Jet energy scale determination for heavy ion jet reconstruction: JES for HI jets}",
-      institution   = "CERN",
-      address      = "Geneva",
-      number       = "ATL-COM-PHYS-2014-329",
-      month         = "Apr",
-      year            = {2014},
-      reportNumber  = "ATL-COM-PHYS-2014-329",
-      url           = "https://cds.cern.ch/record/1696485",
+author        = "Angerami, A and Cole, B and Kosek, T and Perepelitsa, D
+and Rybar, M and Santos, H and Spousta, M",
+title         = "{Jet energy scale determination for heavy ion jet
+reconstruction: JES for HI jets}",
+institution   = "CERN",
+address       = "Geneva",
+number        = "ATL-COM-PHYS-2014-329",
+month         = "Apr",
+year          = "2014",
+reportNumber  = "ATL-COM-PHYS-2014-329",
+url           = "https://cds.cern.ch/record/1696485",
 }
 
-
-@article{Aad:pp_jes,
-	Author = {{ATLAS Collaboration}},
-	Doi = {10.1140/epjc/s10052-014-3190-y},
-	Issn = {1434-6052},
-	Journal = {The European Physical Journal C},
-	Number = {1},
-	Pages = {1--101},
-	NoTitle = {Jet energy measurement and its systematic uncertainty in proton--proton collisions at 7 TeV with the ATLAS detector},
-	Url = {http://dx.doi.org/10.1140/epjc/s10052-014-3190-y},
-	Volume = {75},
-	Year = {2015},
-	Bdsk-Url-1 = {http://dx.doi.org/10.1140/epjc/s10052-014-3190-y}}
-
-
-@article{Aad:pp_algo,
-	Author = {{ATLAS Collaboration}},
-	Doi = {10.1140/epjc/s10052-013-2304-2},
-	Issn = {1434-6052},
-	Journal = {The European Physical Journal C},
-	Number = {3},
-	Pages = {1--118},
-	NoTitle = {Jet energy measurement with the ATLAS detector in proton-proton collisions at 7 TeV},
-	Url = {http://dx.doi.org/10.1140/epjc/s10052-013-2304-2},
-	Volume = {73},
-	Year = {2013},
-	Bdsk-Url-1 = {http://dx.doi.org/10.1140/epjc/s10052-013-2304-2}}
 
 @article{Aad:hi_jets,
 	Author = {{ATLAS Collaboration}},
 	Date-Modified = {2016-08-30 01:53:16 +0000},
-	Doi = {http://dx.doi.org/10.1016/j.physletb.2013.01.024},
+	nodoi = {http://dx.doi.org/10.1016/j.physletb.2013.01.024},
 	Issn = {0370-2693},
 	Journal = {Physics Letters B},
 	Number = {4--5},
@@ -1084,30 +1058,6 @@ url="https://doi.org/10.1007/s100520000474"
 	Bdsk-Url-2 = {http://dx.doi.org/10.1016/j.physletb.2013.01.024}}
 
 
-@techreport{ATLAS-CONF-2017-005,
-      notitle         = "{Measurement of jet fragmentation in 5.02 TeV lead-lead and proton-proton collisions with the ATLAS detector}",
-      institution   = "CERN",
-      collaboration = "ATLAS Collaboration",
-      address       = "Geneva",
-      number        = "ATLAS-CONF-2017-005",
-      month         = "Feb",
-      year          = "2017",
-      reportNumber  = "ATLAS-CONF-2017-005",
-      url           = "http://cds.cern.ch/record/2244802",
-}
-
-
-@techreport{ATLAS-CONF-2017-004,
-      notitle         = "{Measurement of jet fragmentation in 5.02 TeV proton-lead and proton-proton collisions with the ATLAS detector}",
-      institution   = "CERN",
-      collaboration = "ATLAS Collaboration",
-      address       = "Geneva",
-      number        = "ATLAS-CONF-2017-004",
-      month         = "Feb",
-      year          = "2017",
-      reportNumber  = "ATLAS-CONF-2017-004",
-      url           = "https://cds.cern.ch/record/2244800",
-}
 
 
 @techreport{ATLAS-CONF-2017-012,
@@ -1122,30 +1072,32 @@ url="https://doi.org/10.1007/s100520000474"
       url           = "https://cds.cern.ch/record/2244824",
 }
 
-@techreport{ATLAS-CONF-2017-009,
-      notitle         = "{Study of inclusive jet yields in Pb+Pb collisions at $\sqrt{s_{N N}} = 5.02$ TeV}",
-      institution   = "CERN",
-      collaboration = "ATLAS Collaboration",
-      address       = "Geneva",
-      number        = "ATLAS-CONF-2017-009",
-      month         = "Feb",
-      year          = "2017",
-      reportNumber  = "ATLAS-CONF-2017-009",
-      url           = "http://cds.cern.ch/record/2244820",
+
+@article{2019108,
+title = "Measurement of the nuclear modification factor for inclusive jets in Pb+Pb collisions at sNN=5.02 TeV with the ATLAS detector",
+journal = "Physics Letters B",
+volume = "790",
+pages = "108 - 128",
+year = "2019",
+issn = "0370-2693",
+nodoi = "https://doi.org/10.1016/j.physletb.2018.10.076",
+url = "http://www.sciencedirect.com/science/article/pii/S037026931830995X",
+author = "{ATLAS Collaboration}",
 }
 
 
-@techreport{ATLAS-CONF-2016-110,
-      notitle         = "{Study of photon-jet momentum correlations in Pb+Pb and \pp\ collisions at \sqrtsnn\ = 5.02 TeV with ATLAS}",
-      institution   = "CERN",
-      collaboration = "ATLAS Collaboration",
-      address       = "Geneva",
-      number        = "ATLAS-CONF-2016-110",
-      month         = "Sep",
-      year          = "2016",
-      reportNumber  = "ATLAS-CONF-2016-110",
-      url           = "https://cds.cern.ch/record/2220772",
+@article{2019167,
+title = "Measurement of photon-jet transverse momentum correlations in 5.02 TeV Pb + Pb and pp collisions with ATLAS",
+journal = "Physics Letters B",
+volume = "789",
+pages = "167 - 190",
+year = "2019",
+issn = "0370-2693",
+nodoi = "https://doi.org/10.1016/j.physletb.2018.12.023",
+url = "http://www.sciencedirect.com/science/article/pii/S037026931830950X",
+author = "{ATLAS Collaboration}",
 }
+
 
 @unpublished{twiki_MC15c,
    title = "ATLAS Production Group MC15c Twiki",
@@ -1182,15 +1134,13 @@ url="https://doi.org/10.1007/s100520000474"
 	url="http://dx.doi.org/10.1140/epjc/s10052-012-1896-2"
 }
 
-@techreport{pp_pileup_subtr,
-      title         = "{Pile-up subtraction and suppression for jets in ATLAS}",
-      institution   = "CERN",
-      address       = "Geneva",
-      number        = "ATLAS-CONF-2013-083",
-      month         = "Aug",
-      year          = "2013",
-      reportNumber  = "ATLAS-CONF-2013-083",
-      url           = "https://cds.cern.ch/record/1570994",
+@article{pp_pileup_subtr,
+author         = "The ATLAS collaboration",
+title          = "{Pile-up subtraction and suppression for jets in ATLAS}",
+collaboration  = "ATLAS",
+year           = "2013",
+reportNumber   = "ATLAS-CONF-2013-083",
+SLACcitation   = "%%CITATION = ATLAS-CONF-2013-083;%%"
 }
 
 
@@ -1220,5 +1170,255 @@ url="https://doi.org/10.1007/s100520000474"
 	Urldate = {2016-02-08},
 }
 
+@techreport{Nachman:2259091,
+      author        = "Nachman, Benjamin Philip and Shapiro, Marjorie and Rubbo,
+                       Francesco",
+      title         = "{Properties of Jet Fragmentation with the ATLAS detector
+                       at $\sqrt{s}=13$ TeV}",
+      institution   = "CERN",
+      address       = "Geneva",
+      number        = "ATL-COM-PHYS-2017-375",
+      month         = "Apr",
+      year          = "2017",
+      reportNumber  = "ATL-COM-PHYS-2017-375",
+      url           = "https://cds.cern.ch/record/2259091",
+}
 
+@techreport{Choudalakis:1248716,
+      author        = "Choudalakis, G and Spousta, M",
+      title         = "{Characteristic dip in average transverse energy density
+                       and multiplicity around the axis of Anti-kT jets}",
+      institution   = "CERN",
+      address       = "Geneva",
+      number        = "ATL-COM-PHYS-2010-139",
+      month         = "Mar",
+      year          = "2010",
+      reportNumber  = "ATL-COM-PHYS-2010-139",
+      url           = "https://cds.cern.ch/record/1248716",
+}
+
+@article{PhysRevC.98.024908,
+title = {Measurement of jet fragmentation in Pb+Pb and $pp$ collisions at $\sqrt{{s}_{NN}}=5.02$ TeV with the ATLAS detector},
+collaboration = {ATLAS Collaboration},
+journal = {Phys. Rev. C},
+volume = {98},
+issue = {2},
+pages = {024908},
+numpages = {34},
+year = {2018},
+month = {Aug},
+publisher = {American Physical Society},
+nodoi = {10.1103/PhysRevC.98.024908},
+nourl = {https://link.aps.org/doi/10.1103/PhysRevC.98.024908}
+}
+
+@article{ATLAS276FFConf,
+author         = "{ATLAS Collaboration}",
+title          = "{Measurement of jet fragmentation in Pb+Pb and $pp$
+collisions at $\sqrt{{s_\mathrm{NN}}} = 2.76$ TeV with the
+ATLAS detector at the LHC}",
+collaboration  = "ATLAS",
+journal        = "Eur. Phys. J.",
+volume         = "C77",
+year           = "2017",
+number         = "6",
+pages          = "379",
+nodoi            = "10.1140/epjc/s10052-017-4915-5",
+eprint         = "1702.00674",
+archivePrefix  = "arXiv",
+primaryClass   = "hep-ex",
+reportNumber   = "CERN-EP-2017-005",
+SLACcitation   = "%%CITATION = ARXIV:1702.00674;%%"
+}
+
+@unpublished{HIdataderviation,
+   author = "{ATLAS Collaboration}",
+   note = "HI Jet derivations, https://twiki.cern.ch/twiki/bin/view/AtlasProtected/HIRun2JetDFRecoDatasets"
+}
+
+@Misc{HITMF,
+   title = "ATLAS HI Trigger Twiki",
+  note = "{\tt https://twiki.cern.ch/twiki/bin/view/AtlasProtected/TrigHIRecommendedTriggers2015}",
+  howpublished=""
+}
+
+
+@Misc{2015EventCleaning,
+   title = "xAOD Analysis Twiki",
+  note = "{\tt https://twiki.cern.ch/twiki/bin/view/AtlasComputing/SoftwareTutorialxAODAnalysisInROOT}",
+  howpublished=""
+}
+
+@unpublished{HIAnalysisTools,
+   author = "{ATLAS Collaboration}",
+   note = "HIAnalysisTools, https://twiki.cern.ch/twiki/bin/view/Main/HIAnalysisTools"
+}
+
+
+@techreport{ref:centrality,
+author        = "Perepelitsa, Dennis and Steinberg, Peter and Zhou,
+Mingliang and Radhakrishnan, Sooraj Krishnan and Tapia
+Araya, Sebastian",
+title         = "{Centrality determination in $\sqrt{s_\mathrm{NN}} = 5.02$
+TeV Pb+Pb collision data in 2015}",
+institution   = "CERN",
+address       = "Geneva",
+number        = "ATL-COM-PHYS-2016-1287",
+month         = "Sep",
+year          = "2016",
+reportNumber  = "ATL-COM-PHYS-2016-1287",
+url           = "https://cds.cern.ch/record/2212936",
+}
+
+
+@Article{Aad:12081967v1,
+      author      = "{The ATLAS Collaboration}",
+      title        = "{Performance of Jet Reconstruction in Heavy Ion Collisions}",
+      institution  = "",
+      address      = "",
+      month        = "",
+      year         = "2012",
+      note  = "ATL-COM-PHYS-2011-1733, https://cds.cern.ch/record/1409453",
+}
+
+
+@techreport{cc2015,
+author        = "Puri, Akshat",
+title         = "{Cross calibration factors and their uncertainties for
+application to 2015 heavy ion jets}",
+institution   = "CERN",
+address       = "Geneva",
+number        = "ATL-COM-PHYS-2016-1253",
+month         = "Aug",
+year          = "2016",
+reportNumber  = "ATL-COM-PHYS-2016-1253",
+url           = "https://cds.cern.ch/record/2211758",
+}
+
+
+
+@unpublished{ref:tracktwiki,
+   author = "{ATLAS Collaboration}",
+   title = "Tracking Recommendations for ICHEP 2016",
+   note = "https://twiki.cern.ch/twiki/bin/view/AtlasProtected/TrackingCPICHEP2016"
+}
+
+@techreport{Bold:2194917,
+      author        = "Bold, Tomasz and Grabowska-Bold, Iwona and Janus, Piotr
+                       Andrzej and Kremer, Jakub Andrzej and Przybycien, Mariusz",
+      title         = "{Measurement of W boson production in Pb+Pb collisions at
+                       ?sNN =5.02 TeV - Supporting Note}",
+      institution   = "CERN",
+      address       = "Geneva",
+      number        = "ATL-COM-PHYS-2016-828",
+      month         = "Jun",
+      year          = "2016",
+      reportNumber  = "ATL-COM-PHYS-2016-828",
+      url           = "https://cds.cern.ch/record/2194917",
+}
+@article{201865,
+title = "Measurement of jet fragmentation in 5.02 TeV proton-lead and proton-proton collisions with the ATLAS detector",
+journal = "Nuclear Physics A",
+volume = "978",
+pages = "65 - 106",
+year = "2018",
+issn = "0375-9474",
+nodoi = "https://doi.org/10.1016/j.nuclphysa.2018.07.006",
+url = "http://www.sciencedirect.com/science/article/pii/S0375947418301234",
+}
+
+
+@Unpublished{ATLAS-COM-PHYS-2012-1653,
+   author = "Cole, B. and Spousta, M. and Angerami, A. and Perepelitsa, D. and Kosek, T. and Balek, P. and Rybar, M. and Santos, H.",
+   title = "Supporting note for measurement of inclusive jet charged particle fragmentation functions in Pb+Pb collisions",
+   note = "ATL-COM-PHYS-2012-1653"
+}
+
+@unpublished{TrackingRecRun1,
+   title = "Tracking Recommendations for Run1",
+   note = "https://twiki.cern.ch/twiki/bin/view/AtlasProtected/TrackingCPMC12"
+}
+
+@article{ATLAS:2015oia,
+      author         = "{ATLAS collaboration}",
+      title          = "{Jet global sequential corrections with the ATLAS
+                        detector in proton-proton collisions at sqrt(s) = 8 TeV}",
+      year           = "2015",
+      reportNumber   = "ATLAS-CONF-2015-002",
+      url = "https://cds.cern.ch/record/2001682",
+      SLACcitation   = "%%CITATION = ATLAS-CONF-2015-002;%%"
+}
+
+
+@article{D'Agostini:1994zf,
+      author         = "D'Agostini, G.",
+      title          = "{A Multidimensional unfolding method based on Bayes'
+                        theorem}",
+      journal        = "Nucl.Instrum.Meth.",
+      volume         = "A362",
+      pages          = "487-498",
+      nodoi            = "10.1016/0168-9002(95)00274-X",
+      year           = "1995",
+      reportNumber   = "DESY-94-099",
+      SLACcitation   = "%%CITATION = NUIMA,A362,487;%%",
+}
+
+
+@unpublished{JESuncertaintytwiki,
+   title = "JES Uncertainties Twiki",
+   note = "https://twiki.cern.ch/twiki/bin/view/AtlasProtected/JetUncertainties2015ICHEP2016"
+}
+
+@article{2015392,
+title = "Centrality and rapidity dependence of inclusive jet production in 5.02 TeV proton lead collisions with the ATLAS detector",
+journal = "Physics Letters B",
+volume = "748",
+pages = "392 - 413",
+year = "2015",
+issn = "0370-2693",
+author = "{ATLAS Collaboration}",
+}
+
+
+@article{pPbIntNote,
+   author = "Rybar, M and Sickles, A and Puri, A and Angerami, A and Cole, B and Kosek, T and Santos, H and Spousta, M",
+   title = "Jet Fragmentation in p+Pb Collisions",
+   note = "ATL-COM-PHYS-2015-216, https://cds.cern.ch/record/2005223",
+}
+
+
+
+@Misc{JERUncertaintyProviderRun2,
+   title = "JER Uncertainty Provider",
+  note = "{\tt https://twiki.cern.ch/twiki/bin/view/AtlasProtected/JetEnergyResolutionProvider}",
+  howpublished=""
+}
+
+@Article{Aad:1696485,
+      author       = "{The ATLAS Collaboration}",
+      title        = "Jet energy scale determination for heavy ion jet reconstruction: JES for HI jets",
+      note       = "ATL-COM-PHYS-2014-329, https://cds.cern.ch/record/1696485",
+      year         = "2014",
+}
+
+
+@unpublished{TrackingRec,
+   title = "Tracking Recommendations for ICHEP2016",
+   note = "https://twiki.cern.ch/twiki/bin/view/AtlasProtected/TrackingCPICHEP2016"
+}
+
+@Article{Aaboud2018,
+author= "{The ATLAS Collaboration}",
+title="Measurement of the azimuthal anisotropy of charged particles produced in $\sqrt{s_{NN}} = 5.02$~TeV Pb+Pb collisions with the ATLAS detector",
+journal="The European Physical Journal C",
+year="2018",
+month="Dec",
+day="08",
+volume="78",
+number="12",
+pages="997",
+issn="1434-6052",
+nodoi="10.1140/epjc/s10052-018-6468-7",
+url="https://doi.org/10.1140/epjc/s10052-018-6468-7"
+}
 
